# keystroke_auth

./: .gitignore  ARCHITECTURE.md  DATASETS.md  EXPERIMENT_PLAN.md  PROJECT_PROMPT.md  ROADMAP.md  TECHNICAL_SPEC.md  pyproject.toml  requirements.txt  stage7_metric_learning_roadmap.md
models/: auth_policy.json  auth_policy_v2_batchnorm.json  guarded_auth_policy_v2_batchnorm.json
reports/: authentication_batch_report.csv  authentication_batch_report_v2_batchnorm.csv  authentication_batch_report_v2_guarded.csv  authentication_metrics.csv  authentication_score_summary.csv  authentication_threshold_policy.csv  baseline_mlp_report.md  baseline_v1_v2_comparison.csv  baseline_v1_v2_comparison.md  baseline_v2_batchnorm_report.md  baseline_v2_far_frr_curve.csv  classification_report.csv  confusion_matrix.csv  dataset_report.md  guarded_per_user_thresholds_v2_batchnorm.csv  guarded_per_user_thresholds_v2_batchnorm.md  guarded_per_user_thresholds_v2_batchnorm_summary.csv  mlp_architecture_comparison.csv  mlp_architecture_comparison.md  per_user_auth_diagnostics_v2_batchnorm.csv  per_user_auth_diagnostics_v2_batchnorm.md  per_user_thresholds_v2_batchnorm.csv  per_user_thresholds_v2_batchnorm.md  stage5_biometric_authentication_report.md  v2_batchnorm_training_metrics.csv
src/: authenticate.py  authenticate_v2_batchnorm.py  authenticate_v2_guarded.py  compare_baselines_v1_v2.py  config.py  data_loader.py  evaluate.py  experiment_mlp_architectures.py  guarded_per_user_thresholds_v2.py  models.py  per_user_auth_diagnostics_v2.py  per_user_thresholds_v2.py  preprocessing.py  train.py  (+8 more)
(+328 files in other folders)
